# TicTacToeDemo

./: CMakeLists.txt  README.md
cmake/: build.cmake
common/utility/: CMakeLists.txt
common/utility/inc/: Exception.hpp  Random.h  State.h  UtilityCommon.hpp
common/utility/src/: Random.cpp  State.cpp
products/qt_widget_animation_library/: CMakeLists.txt
products/qt_widget_animation_library/inc/: UIStaticAnimation.h
products/qt_widget_animation_library/src/: UIStaticAnimation.cpp
products/qtutils/: CMakeLists.txt
products/qtutils/inc/: UIStaticAnimation.h
products/qtutils/src/: UIStaticAnimation.cpp
products/test_PFProjects/: CMakeLists.txt
products/tic_tac_toe/: CMakeLists.txt
products/tic_tac_toe/inc/: TicTacToeBoard.h  TicTacToeCell.h  TicTacToePlayer.hpp  TicTacToePlayerFactory.h  TicTacToePlayerImpl.h  TicTacToeTypes.hpp  UITicTacToeBoard.h  UITicTacToeBoardController.h  UITicTacToeBoardMain.h  UITicTacToeBoardView.h  UITicTacToeController.h  UITicTacToeMainWindow.h  UITicTacToeWindow.h
products/tic_tac_toe/inc/player_types/: TicTacToeComputerPlayer.h  TicTacToeHumanPlayer.h
products/tic_tac_toe/inc/players/: TicTacToeAdvancedComputerPlayer.h  TicTacToeBasicComputerPlayer.h  TicTacToeHumanPlayer.h  TicTacToeTestComputerPlayer.h
products/tic_tac_toe/resx/: imgCoolBoy.ufo  imgNukaBoyBase.xcf  resources.qrc  ~imgNukaBoyOverlay.UAS
products/tic_tac_toe/src/: TicTacToeBoard.cpp  TicTacToeCell.cpp  TicTacToePlayerFactory.cpp  TicTacToePlayerImpl.cpp  UITicTacToeBoard.cpp  UITicTacToeBoard.ui  UITicTacToeBoardController.cpp  UITicTacToeBoardMain.cpp  UITicTacToeBoardMain.ui  UITicTacToeBoardView.cpp  UITicTacToeController.cpp  UITicTacToeMainWindow.cpp  UITicTacToeMainWindow.ui  UITicTacToeWindow.cpp  UITicTacToeWindow.ui  main.cpp
products/tic_tac_toe/src/player_types/: TicTacToeComputerPlayer.cpp  TicTacToeHumanPlayer.cpp
products/tic_tac_toe/src/players/: TicTacToeAdvancedComputerPlayer.cpp  TicTacToeBasicComputerPlayer.cpp  TicTacToeHumanPlayer.cpp  TicTacToeTestComputerPlayer.cpp
products/webcam/: CMakeLists.txt
products/webcam/inc/: UIWebcamMainWindow.h  UIWebcamPlugNPlayDetectionThread.h  UIWebcamViewer.h
products/webcam/src/: UIWebcamMainWindow.cpp  UIWebcamMainWindow.ui  UIWebcamPlugNPlayDetectionThread.cpp  UIWebcamViewer.cpp  UIWebcamViewer.ui  main.cpp
